tests/pos/Int00.hs
incr :: Int 
incr = ( 12 )