tests/neg/Inc00.hs
incr :: Int 
incr = 1

moo :: Int 
moo = incr 7
